--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,3 +46,9 @@ jobs:
       - name: Echo
         run: |
           echo "${{ steps.read.outputs.result }}"
+      - name: X1
+        if: ${{ contains(fromJSON(steps.read.outputs.result)[x], 'success') }}
+        run: |
+          echo "X1"
+
+  
